added 404 not found page

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -75,7 +75,7 @@ body {
   color: #aaaaaa; }
 .post .post-content p {
   margin: 0; }
-.post .discuss {
+.post .bite {
   display: block;
   float: right;
   margin-top: 7px; }
