--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -3,6 +3,6 @@
     <div class="post-content">
       <h3><a href="/">{{title}}</a></h3>
     </div>
-    <a href="{{pathFor 'postPage'}}" class="discuss btn btn-default">Discuss</a>
+    <a href="{{pathFor 'postPage'}}" class="bite btn btn-default">Bite</a>
   </div>
 </template>
