--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -14,7 +14,8 @@
 
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav">
-          <li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
+          {{#if currentUser}}<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
+          {{/if}}
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
