--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -2,12 +2,10 @@
   <form class="main form">
 
 
-
-
     <div class="form-group">
       <label class="control-label" for="title">Title</label>
       <div class="controls">
-        <input name="title" id="title" type="text" value="" placeholder="Name your post" class="form-control"/>
+        <input name="title" id="title" type="text" value="" placeholder="Name your post." class="form-control"/>
       </div>
     </div>
 
@@ -15,10 +13,25 @@
     <div class="form-group">
       <label class="control-label" for="activity">Activity</label>
       <div class="controls">
-        <input name="activity" id="activity" type="text" value="" placeholder="" class="form-control"/>
+        <input name="activity" id="activity" type="text" value="" placeholder="What are we doing?" class="form-control"/>
       </div>
     </div>
 
+
+    <div class="form-group">
+      <label class="control-label" for="description">Description, Location</label>
+      <div class="controls">
+        <input name="description" id="description" type="text" value="" placeholder="Taunt your challenger. Designate a battleground." class="form-control"/>
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <label class="control-label" for="date">Date</label>
+      <div class="controls">
+        <input name="date" id="date" type="date" value="" placeholder="" class="form-control"/>
+      </div>
+    </div>
 
 
     <input type="submit" value="Submit" class="btn btn-primary"/>
