added error messages instead of alerts

--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -1,4 +1,4 @@
-<template name="postSubmit">
+<template name="postEdit">
   <form class="main form">
 
 
@@ -19,17 +19,15 @@
 
 
     <div class="form-group">
-      <label class="control-label" for="description">Description, Location</label>
+      <label class="control-label" for="description">Description</label>
       <div class="controls">
         <input name="description" id="description" type="text" value="" placeholder="Taunt your challenger. Designate a battleground." class="form-control"/>
       </div>
     </div>
 
 
-
-
     <input type="submit" value="Submit" class="btn btn-primary"/>
-
-
+    <hr/>
+    <a class="btn btn-danger delete" href="#">Delete post</a>
   </form>
 </template>
