--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -2,6 +2,8 @@
   <div class="post">
     <div class="post-content">
       <h3><a href="/">{{title}}</a></h3>
+      <p>submitted by {{author}}
+      {{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}</p>
     </div>
     <a href="{{pathFor 'postPage'}}" class="bite btn btn-default">Bite</a>
   </div>
