--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -1,3 +1,9 @@
 <template name="postPage">
   {{> postItem}}
+  <div class="post">
+    <div class="post-content">
+      <p>{{activity}}</p>
+      <p>{{description}}</p>
+    </div>
+  </div>
 </template>
