created form to submit a comment

--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -15,4 +15,10 @@
     {{/each}}
   </ul>
 
+  {{#if currentUser}}
+    {{> commentSubmit}}
+  {{else}}
+    <p>Please log in to leave a comment.</p>
+  {{/if}}
+
 </template>
