added realtime search box to navbar

--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -12,18 +12,22 @@
 
 
 
+
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav">
           {{#if currentUser}}<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
           {{/if}}
         </ul>
 
+        <form class="nav navbar-nav navbar-form">
+          {{> searchBox}}
+        </form>
+
+
         <ul class="nav navbar-nav navbar-right">
           {{> loginButtons}}
         </ul>
       </div>
-
-
     </div>
   </nav>
 </template>
