USBAT get notifications when other people comment on their posts

--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,7 +1,7 @@
 <template name="postItem">
   <div class="post">
     <div class="post-content">
-      <h3><a href="/">{{title}}</a></h3>
+      <h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
       <p>
       submitted by {{author}},
 
