added date and time picker to submit form

--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -29,6 +29,11 @@
     </div>
 
 
+    <div class="form-group">
+      <label class="control-label" for="datetime">Pick a date and time.</label>
+        {{> datetimepicker}}
+    </div>
+
 
     <input type="submit" value="Submit" class="btn btn-primary"/>
 
