logged in users can join events as challenger and/or spectator

--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -5,6 +5,19 @@
     <div class="post-content">
       <p><strong>{{activity}}</strong></p>
       <p><strong>{{description}}</strong></p>
+
+
+      <table class="table">
+        <tr>
+          <th><input type="submit" value="Join as Spectator" class="upSpec btn btn-primary"/></th>
+          <th><input type="submit" value="Join as Challenger" class="upChall btn btn-danger"/></th>
+        </tr>
+        <tr>
+          <td>{{specJoins}} Spectators</td>
+          <td>{{challJoins}} Challengers</td>
+        </tr>
+      </table>
+
     </div>
   </div>
 
