added UI tweaks to joining events

--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -2,7 +2,7 @@
   <div class="post">
     <div class="post-content">
       <h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
-      <p>
+      <p>{{specJoins}} Spectators, {{challJoins}} Challengers,
       submitted by {{author}},
 
         <a href="{{pathFor 'postPage'}}">{{commentsCount}} comments</a>
