--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -9,8 +9,8 @@
 
       <table class="table">
         <tr>
-          <th><input type="submit" value="Join as Spectator" class="upSpec btn btn-primary"/></th>
-          <th><input type="submit" value="Join as Challenger" class="upChall btn btn-danger"/></th>
+          <th><input type="submit" value="{{joinedSpec}}" class="{{joinedSpec2}}"/></th>
+          <th><input type="submit" value="{{joinedChall}}" class="{{joinedChall2}}"/></th>
         </tr>
         <tr>
           <td>{{specJoins}} Spectators</td>
