--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -6,7 +6,7 @@
       submitted by {{author}},
 
         <a href="{{pathFor 'postPage'}}">{{commentsCount}} comments</a>
-        {{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}</p>
+        {{#if ownPost}}<a href="{{pathFor 'postEdit'}}" style="color: red">Edit</a>{{/if}}</p>
     </div>
     <a href="{{pathFor 'postPage'}}" class="bite btn btn-default">Bite</a>
   </div>
