--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -6,9 +6,8 @@
       <p><strong>{{activity}}</strong></p>
       <p><strong>{{description}}</strong></p>
 
-
-      <p>{{specJoins}} Spectators</p>
-      <p>{{challJoins}} Challengers</p>
+      <p><a href="{{pathFor route='postSpectators'}}"> List of Spectators</a></p>
+      <p><a href="{{pathFor route='postChallengers'}}"> List of Challengers</a></p>
 
 
       {{#if currentUser}}
