changed helper names

--- a/client/templates/posts/post_challengers.html
+++ b/client/templates/posts/post_challengers.html
@@ -17,5 +17,5 @@
 
 
 <template name="challenger">
-  <p>{{userName}}</p>
+  <p>{{userName}} <input value="Select Challenger" class="btn btn-danger"/></p>
 </template>
