--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -14,8 +14,8 @@
         {{#if ownPost}}
           <p>You are the Contender of this event.</p>
         {{else}}
-          <input type="submit" value="{{joinedSpec}}" class="{{joinedSpec2}}"/>
-          <input type="submit" value="{{joinedChall}}" class="{{joinedChall2}}"/>
+          <input type="submit" value="{{joinedSpec}}" class="{{joinedSpecClass}}"/>
+          <input type="submit" value="{{joinedChall}}" class="{{joinedChallClass}}"/>
         {{/if}}
       {{else}}
         <p>Please login to join as Spectator or Challenger.</p>
