each post now shows optional date and time

--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -28,6 +28,11 @@
       </div>
     </div>
 
+    <div class="form-group">
+      <label class="control-label" for="dateAndTime">Pick a date and time.</label>
+        {{> datetimepicker}}
+    </div>
+
 
     <input type="submit" value="Submit" class="btn btn-primary"/>
     <hr/>
