--- a/client/templates/includes/date_time_picker.html
+++ b/client/templates/includes/date_time_picker.html
@@ -2,10 +2,10 @@
 
   <div class="container">
     <div class="row">
-      <div class='col-sm-6'>
+      <div class="col-sm-6">
         <div class="form-group">
-          <div class='input-group date' id='datetimepicker1'>
-              <input type='text' class="form-control" />
+          <div class="input-group date" id="datetimepicker1">
+              <input name="dateAndTime" type="text" class="form-control" placeholder="Optional"/>
               <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
               </span>
           </div>
