--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -15,10 +15,11 @@
 
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav">
-          {{#if currentUser}}<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
-        <li class="dropdown">
-          {{> notifications}}
-        </li>
+          {{#if currentUser}}
+          <li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
+          <li class="dropdown">
+            {{> notifications}}
+          </li>
           {{/if}}
         </ul>
 
