--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -1,10 +1,13 @@
 <template name="postPage">
   {{> postItem}}
 
+  {{> contenders}}
+
   <div class="post">
     <div class="post-content">
       <p><strong>{{activity}}</strong></p>
       <p><strong>{{description}}</strong></p>
+      <p><strong>{{dateAndTime}}</strong></p>
 
       <p><a href="{{pathFor route='postSpectators'}}"> List of Spectators</a></p>
       <p><a href="{{pathFor route='postChallengers'}}"> List of Challengers</a></p>
