fixed edit to show current post information and added sword logo

--- a/client/templates/includes/date_time_picker.html
+++ b/client/templates/includes/date_time_picker.html
@@ -5,7 +5,7 @@
       <div class="col-sm-6">
         <div class="form-group">
           <div class="input-group date" id="datetimepicker1">
-              <input name="dateAndTime" type="text" class="form-control" placeholder="Optional"/>
+              <input name="dateAndTime" type="text" class="form-control" value="{{dateAndTime}}"/>
               <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
               </span>
           </div>
