--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -5,7 +5,7 @@
     <div class="form-group">
       <label class="control-label" for="title">Title</label>
       <div class="controls">
-        <input name="title" id="title" type="text" value="" placeholder="Name your post." class="form-control"/>
+        <input name="title" id="title" type="text" value="{{title}}" placeholder="Name your post." class="form-control"/>
         <span class="help-block">{{errorMessage 'title'}}</span>
       </div>
     </div>
@@ -14,7 +14,7 @@
     <div class="form-group">
       <label class="control-label" for="activity">Activity</label>
       <div class="controls">
-        <input name="activity" id="activity" type="text" value="" placeholder="What are we doing?" class="form-control"/>
+        <input name="activity" id="activity" type="text" value="{{activity}}" placeholder="What are we doing?" class="form-control"/>
         <span class="help-block">{{errorMessage 'activity'}}</span>
       </div>
     </div>
@@ -23,13 +23,13 @@
     <div class="form-group">
       <label class="control-label" for="description">Description</label>
       <div class="controls">
-        <input name="description" id="description" type="text" value="" placeholder="Taunt your challenger. Designate a battleground." class="form-control"/>
+        <input name="description" id="description" type="text" value="{{description}}" placeholder="Taunt your challenger. Designate a battleground." class="form-control"/>
         <span class="help-block">{{errorMessage 'description'}}</span>
       </div>
     </div>
 
     <div class="form-group">
-      <label class="control-label" for="dateAndTime">Pick a date and time.</label>
+      <label class="control-label" for="dateAndTime">Pick a date and time. (Optional)</label>
         {{> datetimepicker}}
     </div>
 
