--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -30,7 +30,7 @@
 
 
     <div class="form-group">
-      <label class="control-label" for="datetime">Pick a date and time.</label>
+      <label class="control-label" for="datetime">Pick a date and time. (Optional)</label>
         {{> datetimepicker}}
     </div>
 
