--- a/client/templates/posts/post_challengers.html
+++ b/client/templates/posts/post_challengers.html
@@ -17,5 +17,7 @@
 
 
 <template name="challenger">
-  <p>{{userName}} <input value="Select Challenger" class="btn btn-danger"/></p>
+  <p>{{userName}} <input class="btn btn-danger selectChallenger" id="{{userName}}" value="Select Challenger"/></p>
+
 </template>
+
