--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -8,6 +8,6 @@
         <a href="{{pathFor 'postPage'}}">{{commentsCount}} comments</a>
         {{#if ownPost}}<a href="{{pathFor 'postEdit'}}" style="color: red">Edit</a>{{/if}}</p>
     </div>
-    <a href="{{pathFor 'postPage'}}" class="bite btn btn-default">Bite</a>
+      <a href="{{pathFor 'postPage'}}"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Battle_icon_gladii.svg/120px-Battle_icon_gladii.svg.png" class="bite" width="30" height="30" border="0"></a>
   </div>
 </template>
