USBAT select challenger from list

--- a/client/templates/posts/post_challengers.html
+++ b/client/templates/posts/post_challengers.html
@@ -17,7 +17,11 @@
 
 
 <template name="challenger">
-  <p>{{userName}} <input class="btn btn-danger selectChallenger" id="{{userName}}" value="Select Challenger"/></p>
+ <p>
+
+ {{userName}}
+
+ </p>
 
 </template>
 
