--- a/client/templates/posts/post_contenders.html
+++ b/client/templates/posts/post_contenders.html
@@ -1,15 +1,66 @@
-<template name="contenders">
+<template name="postContenders">
   <div class="post">
     <div class="post-content">
 
-    {{author}} VS
 
-
-    <!-- if no challengers chosen, "awaiting contender", "ongoing event" -->
-    <a href="{{pathFor route='postChallengers'}}"> Select a Challenger</a>
-
+      {{#if ownPost}}
+        <a href="#" class="btn btn-primary notifyChange">Notify Change</a>
+        {{author}} VS
+        <a href="{{pathFor route='contendersList'}}">{{displayText}}</a>
+      {{else}}
+        {{author}} VS <strong>Waiting for Challengers</strong>
+      {{/if}}
 
 
     </div>
   </div>
+</template>
+
+
+
+<template name="contendersList">
+  {{> postItem}}
+
+  <div class="post">
+    <div class="post-content">
+
+    <label>List of Challengers</label>
+
+    {{#each challengers}}
+      {{> contender}}
+    {{/each}}
+
+    </div>
+  </div>
+</template>
+
+
+
+<template name="contender">
+  <p>
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#user-{{this}}" data-whatever="{{userName}}">Select Challenger</button>
+
+    {{userName}}
+
+  </p>
+
+  <div class="modal fade bs-example-modal-sm example" id="user-{{this}}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title"></h4>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary no" data-dismiss="modal">No</button>
+          <button type="button" class="btn btn-primary yes">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
 </template>
