--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -1,7 +1,7 @@
 <template name="postPage">
   {{> postItem}}
 
-  {{> contenders}}
+  {{> postContenders}}
 
   <div class="post">
     <div class="post-content">
@@ -9,13 +9,14 @@
       <p><strong>{{description}}</strong></p>
       <p><strong>{{dateAndTime}}</strong></p>
 
+
       <p><a href="{{pathFor route='postSpectators'}}"> List of Spectators</a></p>
       <p><a href="{{pathFor route='postChallengers'}}"> List of Challengers</a></p>
 
 
       {{#if currentUser}}
         {{#if ownPost}}
-          <p>You are the Contender of this event.</p>
+
         {{else}}
           <input type="submit" value="{{joinedSpec}}" class="{{joinedSpecClass}}"/>
           <input type="submit" value="{{joinedChall}}" class="{{joinedChallClass}}"/>
