USBAT sent group notifications after selecting a challenger

--- a/client/templates/notifications/notifications.html
+++ b/client/templates/notifications/notifications.html
@@ -18,9 +18,19 @@
 </template>
 
 <template name="notificationItem">
+
   <li>
-    <a href="{{notificationPostPath}}">
-      <strong>{{commenterName}}</strong> commented on your post
-    </a>
+
+    {{#if isGroup}}
+      <a href="{{groupNotification}}">
+        <strong>{{author}}</strong> has selected a challenger
+      </a>
+    {{else}}
+      <a href="{{notificationPostPath}}">
+        <strong>{{commenterName}}</strong> commented on your post
+      </a>
+    {{/if}}
+
+
   </li>
 </template>
