--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar" style="background: black" role="navigation">
     <div class="container-fluid">
 
 
@@ -7,7 +7,7 @@
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
           <span class="sr-only">Toggle navigation</span>
           </button>
-        <a class="navbar-brand" href="{{pathFor 'postsList'}}">Contender</a>
+        <a class="navbar-brand" style="font-size: 30px" href="{{pathFor 'postsList'}}">Contender</a>
       </div>
 
 
