--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,13 +1,13 @@
 <template name="postItem">
   <div class="post">
     <div class="post-content">
-      <h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
+      <h3 id="postTitle"><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
 
       <p>
         <a href="{{pathFor route='postSpectators'}}"> {{specJoins}} Spectators,</a>
         <a href="{{pathFor route='postChallengers'}}"> {{challJoins}} Challengers,</a>
         <a href="{{pathFor 'postPage'}}">{{commentsCount}} comments,</a>
-        submitted by {{author}}
+        submitted by <span id="authorMark">{{author}}</span>
           {{#if ownPost}}
           <a href="{{pathFor 'postEdit'}}" style="color: red">Edit</a>
           {{/if}}
@@ -15,7 +15,6 @@
 
 
     </div>
-      <a href="{{pathFor 'postPage'}}"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Battle_icon_gladii.svg/120px-Battle_icon_gladii.svg.png" class="bite" width="30" height="30" border="0"></a>
-      <button class="btn btn-success bite">Close Event</button>
+      <a href="{{pathFor 'postPage'}}" class="btn btn-success bite">Open</a>
   </div>
 </template>
