--- a/client/templates/posts/post_contenders.html
+++ b/client/templates/posts/post_contenders.html
@@ -15,13 +15,13 @@
     <div class="post-content col-md-3">
       {{#if ownPost}}
       <a href="{{pathFor route='contendersList'}}" class="btn btn-primary">Select Challenger</a>
-      <p>Pick your foe from a list of Challengers.</p>
+      <p>First, select your Challenger.</p>
       {{/if}}
     </div>
 
     <div class="post-content col-md-3">
       {{#if ownPost}}
-      <button class="btn btn-danger notifyChange">Notify Changes</button>
+      <button class="btn btn-danger notifyChange">Send Group Notification</button>
       <p>Rally your Spectators and others after selecting your Challenger.</p>
       {{/if}}
     </div>
