--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -3,8 +3,8 @@
 
   {{> postContenders}}
 
-  <div class="post">
-    <div class="post-content">
+  <div class="post row">
+    <div class="post-content col-md-6">
       <p><strong>{{activity}}</strong></p>
       <p><strong>{{description}}</strong></p>
       <p><strong>{{dateAndTime}}</strong></p>
@@ -22,6 +22,9 @@
       {{/if}}
 
 
+    </div>
+    <div class="post-content col-md-6">
+      <!-- location map -->
     </div>
   </div>
 
