--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,3 +1,5 @@
+
+
 span#authorMark {
   font-weight: 800;
 
@@ -41,7 +43,11 @@ body {
   position: relative;
   opacity: 1; }
 
-
+#navbarBrand {
+  font-size: 30px;
+  font-family: 'Exo', sans-serif;
+  font-weight: 800;
+}
 
 .post:before, .post:after {
   content: "";
