--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -9,7 +9,7 @@
         <a href="{{pathFor 'postPage'}}">{{commentsCount}} comments,</a>
         submitted by <span id="authorMark">{{author}}</span>
           {{#if ownPost}}
-          <a href="{{pathFor 'postEdit'}}" style="color: red">Edit</a>
+          <a href="{{pathFor 'postEdit'}}" style="color: red">Edit Post</a>
           {{/if}}
       </p>
 
