--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -10,7 +10,7 @@
 
 
   {{#ifEsHasNoResults index="posts"}}
-    <div class="no-results">No results found!</div>
+    <div class="no-results" style="color: white">No results found!</div>
 
   {{else}}
 
